kubernetes/apps/network/envoy-gateway/config/internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.0.10.101"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: bo0tzz-me-production-tls
          - name: zijlein-de-production-tls
    - name: home-assistant
      protocol: HTTPS
      port: 443
      hostname: 8a.zijlein.de
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: automation
      tls:
        mode: Terminate
        certificateRefs:
          - name: zijlein-de-production-tls
