kubernetes/apps/network/envoy-gateway/config/old-cluster.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: old-cluster
spec:
  parentRefs:
    - name: envoy-external
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: old-cluster
